// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toMatchStyledComponentsSnapshot mount 1`] = `
.iATjrR {
  padding: 4em;
  background: papayawhip;
}

.bIftVI {
  font-size: 1.5em;
  -webkit-text-align: center;
  text-align: center;
  color: palevioletred;
}

.bIftVI:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.bIftVI em {
  color: green;
}

@media (min-width: 600px) {
  .bIftVI {
    color: blue;
  }
}

@supports (display: grid) {
  .bIftVI {
    display: grid;
  }
}

<styled.section>
  <section
    className="sc-bdVaJa iATjrR"
  >
    <styled.h1>
      <h1
        className="sc-bwzfXH bIftVI"
      >
        Hello World, this is my first styled component!
      </h1>
    </styled.h1>
  </section>
</styled.section>
`;

exports[`toMatchStyledComponentsSnapshot null 1`] = `null`;

exports[`toMatchStyledComponentsSnapshot shallow 1`] = `
.iATjrR {
  padding: 4em;
  background: papayawhip;
}

<section
  className="sc-bdVaJa iATjrR"
>
  <styled.h1>
    Hello World, this is my first styled component!
  </styled.h1>
</section>
`;

exports[`toMatchStyledComponentsSnapshot test-renderer 1`] = `
.iATjrR {
  padding: 4em;
  background: papayawhip;
}

.bIftVI {
  font-size: 1.5em;
  -webkit-text-align: center;
  text-align: center;
  color: palevioletred;
}

.bIftVI:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.bIftVI em {
  color: green;
}

@media (min-width: 600px) {
  .bIftVI {
    color: blue;
  }
}

@supports (display: grid) {
  .bIftVI {
    display: grid;
  }
}

<section
  className="sc-bdVaJa iATjrR"
>
  <h1
    className="sc-bwzfXH bIftVI"
  >
    Hello World, this is my first styled component!
  </h1>
</section>
`;
